iptables
# Generated by iptables-save v1.4.7 on Wed Aug 21 23:53:53 2019
*nat
:PREROUTING ACCEPT [143:22607]
:POSTROUTING ACCEPT [78:4696]
:OUTPUT ACCEPT [78:4696]
#-A PREROUTING -p tcp -m tcp --dport 61888 -j REDIRECT --to-ports 8080 
COMMIT
# Completed on Wed Aug 21 23:53:53 2019
# Generated by iptables-save v1.4.7 on Wed Aug 21 23:53:53 2019
*filter
:INPUT DROP [8:815]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [132:28872]
-A INPUT -i lo -j ACCEPT 
#-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT 
#-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 60022 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1719 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1720 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3719 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3720 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10000:49999 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5070 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5033 -j ACCEPT
-A INPUT -p udp -m udp --dport 5034 -j ACCEPT
-A INPUT -p udp -m udp --dport 10000:49999 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m set --match-set mainland src -m udp --dport 5060 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 61888 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 52088 -j ACCEPT 
COMMIT
# Completed on Wed Aug 21 23:53:53 2019
